Updated to fix login issues (RE: issue report #2)

--- a/PwnedPasswordsDLL/PwnedPasswordsDLL.vcxproj
+++ b/PwnedPasswordsDLL/PwnedPasswordsDLL.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{7571493B-0026-4AED-B478-44196C7F4533}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>PwnedPasswordsDLL</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -83,8 +83,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(IncludePath)</IncludePath>
-    <LibraryPath>$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\jacko\OneDrive\Documents\Personal\IT\Programming\Programs\Pwned Passwords\Old\Testing\CryptoPP\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\jacko\OneDrive\Documents\Personal\IT\Programming\Programs\Pwned Passwords\Old\Testing\CryptoPP\x64\Output\Release;$(LibraryPath)</LibraryPath>
     <ExecutablePath>$(ExecutablePath)</ExecutablePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -138,7 +138,7 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>wldap32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>wldap32.lib;cryptlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
